--- a/RAG-Demo/RAG-Demo.ApiService/RAG-Demo.ApiService.csproj
+++ b/RAG-Demo/RAG-Demo.ApiService/RAG-Demo.ApiService.csproj
@@ -8,10 +8,19 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RAG-Demo.ServiceDefaults\RAG-Demo.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\RAG-Demo.Common\RAG-Demo.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspire.Azure.AI.OpenAI" Version="13.0.1-preview.1.25575.3" />
+    <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="13.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
+    <PackageReference Include="Pgvector.EntityFrameworkCore" Version="0.2.2" />
   </ItemGroup>
 
 </Project>
